--- a/app/assets/stylesheets/common/components/sidebar-categories-form.scss
+++ b/app/assets/stylesheets/common/components/sidebar-categories-form.scss
@@ -1,4 +1,39 @@
+.sidebar-categories-form-modal {
+  .modal-body {
+    min-height: 50vh;
+  }
+}
+
 .sidebar-categories-form {
+  .sidebar-categories-form__filter {
+    display: flex;
+    flex-direction: row;
+    margin-right: auto;
+    width: 100%;
+    margin-bottom: 1em;
+    position: relative;
+  }
+
+  .sidebar-categories-form__filter-input-icon {
+    position: absolute;
+    left: 0.5em;
+    top: 0.65em;
+    color: var(--primary-low-mid);
+  }
+
+  .sidebar-categories-form__filter-input-field {
+    border-color: var(--primary-low-mid);
+    padding-left: 1.75em;
+    width: 100%;
+
+    &:focus {
+      border-color: var(--tertiary);
+      outline: none;
+      outline-offset: 0;
+      box-shadow: inset 0px 0px 0px 1px var(--tertiary);
+    }
+  }
+
   .sidebar-categories-form__row {
     display: flex;
     flex-direction: column;
@@ -21,7 +56,7 @@
     padding: 0.5em 0;
   }
 
-  .sidebar-categories-form__category-row[data-category-level="0"] {
+  .sidebar-categories-form__category-row[data-category-level="0"]:not(:only-child) {
     border-bottom: 1px solid var(--primary-low);
   }
 
