UX: show tooltip for global nav section icon (#21974)

--- a/app/assets/javascripts/discourse/app/components/sidebar/common/custom-section.hbs
+++ b/app/assets/javascripts/discourse/app/components/sidebar/common/custom-section.hbs
@@ -1,6 +1,7 @@
 <Sidebar::Section
   @sectionName={{this.section.slug}}
   @headerLinkText={{this.section.decoratedTitle}}
+  @indicatePublic={{this.section.indicatePublic}}
   @collapsable={{@collapsable}}
   @headerActions={{this.section.headerActions}}
   @headerActionsIcon={{this.section.headerActionIcon}}
