FIX: prevents long press to hijack reaction event (#22021)
Removing a reaction could start a long press at the same time and put the screen in a stuck state.

This commit ensures we give an opportunity to the reaction to capture the event first and not propagate further.

--- a/plugins/chat/assets/javascripts/discourse/components/chat-message-reaction.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-message-reaction.hbs
@@ -1,8 +1,8 @@
 {{#if (and @reaction this.emojiUrl)}}
   <button
     type="button"
-    {{on "touchstart" this.handleTouchStart}}
-    {{on "click" this.handleClick}}
+    {{on "click" this.handleClick bubbles=false}}
+    {{on "touchstart" this.handleClick bubbles=false}}
     tabindex="0"
     class={{concat-class
       "chat-message-reaction"
